--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#b71c1c</color>
+    <color name="colorAccent">#f05545</color>
+    <color name="colorPrimaryDark">#7f0000</color>
+    <color name="primaryTextColor">#ffffff</color>
+    <color name="cardview_bg_color">#DD2C00</color>
+    <color name="bg_color">#9E9E9E</color>
 </resources>
